# Script-Insights

./: .gitignore  IMPLEMENTATION-PLAN.md  README.md  TASK.md  skills-lock.json
backend/: .env.example  main.py  pyproject.toml  script_insights.db
backend/app/: main.py
backend/app/agents/: __init__.py  dspy_config.py  dspy_programs.py  dspy_runtime.py  heuristic_programs.py  llm_gateway.py  protocols.py  registry.py
backend/app/api/: __init__.py  dependencies.py  mappers.py  schemas.py
backend/app/core/: container.py  logging.py  settings.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/domain/: __init__.py  agent_runs.py  analysis_artifacts.py  analysis_outputs.py  analysis_runs.py  evaluation.py  normalization.py  run_views.py
backend/app/evaluation/: __init__.py  critic.py  evaluator.py
backend/app/repositories/: agent_runs.py  analysis_artifacts.py  analysis_runs.py  in_memory.py  sqlalchemy.py  sqlalchemy_agent_runs.py  sqlalchemy_codecs.py  sqlalchemy_gateway.py
backend/app/workers/: cli.py  (+1 more)
backend/tests/: conftest.py  test_agent_runs_and_critic.py  test_db_session.py  test_dspy_runtime.py  test_emotion.py  test_engagement.py  test_fingerprint_reuse.py  test_fingerprints.py  test_guardrails.py  test_health.py  test_history_and_compare.py  test_llm_gateway.py  test_normalization.py  test_pdf_ingestion.py  test_queued_execution.py  test_recommendations_and_cliffhanger.py  test_run_errors.py  test_settings.py  test_smoke_and_observability.py  test_sqlalchemy_codecs.py  test_sqlite_persistence.py  test_submit_run.py  test_summary.py
(+51 files in other folders)
